--- a/surveys_free_text.html
+++ b/surveys_free_text.html
@@ -163,7 +163,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <section id="contents-and-disclaimer" class="level1" data-number="1">
 <h1 data-number="1"><span class="header-section-number">1</span> Contents and Disclaimer</h1>
-<p>This page refers to student surveys of “Experimental Advanced Biochemistry I” course (Biochemistry Degree, <a href="https://www.uam.es">Universidad Autónoma de Madrid</a>). Description of questionnaires and analysis of quantitative questions is in the main page <a href="https://mredrejo.github.io/bqexav/">here</a>. The GitHub <a href="https://github.com/mredrejo/bqexav">repo</a> contains the original files of all analyzes.</p>
+<p>This page refers to student surveys of “Experimental Advanced Biochemistry I” course (Biochemistry Degree, <a href="https://www.uam.es">Universidad Autónoma de Madrid</a>). Description of questionnaires and analysis of quantitative questions is in the main page <a href="https://mredrejo.github.io/bqexav/">here</a>. The GitHub <a href="https://github.com/mredrejo/bqexav">repo</a> contains the original files of all analyses.</p>
 <p>The data is made available under the Creative Common License (CC BY-NC-ND 3.0 ES).</p>
 <div class="callout-warning callout callout-style-default callout-captioned">
 <div class="callout-header d-flex align-content-center">
